--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
                 <div class="slider-banner-3__destination">
                     <span> Toyota</span>
-                    <h1>Innova Crysta</h1>
+                    <h1>Innova</h1>
                 </div>
 
             </div>
@@ -90,6 +90,17 @@
                 <div class="slider-banner-3__destination">
                     <span>Maruti Suzuki</span>
                     <h1>Swift Dzire</h1>
+                </div>
+
+            </div>
+        </div>
+        <div class="slider-banner-3__item">
+            <img class="img-overlay" src="assets/images/slider/banner4.jpg" style="max-width:600px;" alt="slider3">
+            <div class="slider-banner-3__item__text animated bounceIn">
+
+                <div class="slider-banner-3__destination">
+                    <span>Toyota</span>
+                    <h1>Etios</h1>
                 </div>
 
             </div>
@@ -570,7 +581,7 @@
                             <ul>
                                 <li><a href="#cars">Our Cars</a></li>
                                 <li><a href="#places">Destinations</a></li>
-                                <li><a href="#aboutus">About Us</a></li>
+                                <li><a href="#about">About Us</a></li>
                                 <li><a href="#reviews">Reviews</a></li>
                             </ul>
                         </div>
