--- a/index.html
+++ b/index.html
@@ -569,7 +569,8 @@
                                 <li><span>Kerala tours and cabs</span></li>
                                 <li><span>Piravom, Ernakulam</span></li>
                                 <li><span>kerala, pin- 686664</span></li>
-                                <li><span> Land line : 0485 2243505</span></li>
+                                <li><span>Land line : 0485 2243505</span></li>
+                                <li><span>Email : info@keralatoursandcabs.com</span></li>
                             </ul>
                         </div>
 
