--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                             <div class="trending-tour-item__group-infor--left">
                                 <div class="trending-tour-item__group-infor__lasting">6 person / 100 Kms</div>
                                 <div class="trending-tour-item__group-infor__lasting">Additional Km : ₹21</div>
-                                <div class="trending-tour-item__group-infor__lasting">Bata : ₹300pd</div>
+                                <div class="trending-tour-item__group-infor__lasting">Driver Bata : ₹300pd</div>
                             </div>
 
                             <p class="trending-tour-item__group-infor__sale-price">₹2500</p>
@@ -165,7 +165,7 @@
                             <div class="trending-tour-item__group-infor--left">
                                 <div class="trending-tour-item__group-infor__lasting">4 person / 100 Kms</div>
                                 <div class="trending-tour-item__group-infor__lasting">Additional Km : ₹15</div>
-                                <div class="trending-tour-item__group-infor__lasting">Bata : ₹300pd</div>
+                                <div class="trending-tour-item__group-infor__lasting">Driver Bata : ₹300pd</div>
                             </div>
 
                             <span class="trending-tour-item__group-infor__price">₹1600</span>
@@ -186,7 +186,7 @@
                             <div class="trending-tour-item__group-infor--left">
                                 <div class="trending-tour-item__group-infor__lasting">4 person / 100 Kms</div>
                                 <div class="trending-tour-item__group-infor__lasting">Additional Km : ₹15</div>
-                                <div class="trending-tour-item__group-infor__lasting">Bata : ₹300pd</div>
+                                <div class="trending-tour-item__group-infor__lasting">Driver Bata : ₹300pd</div>
                             </div>
 
                             <span class="trending-tour-item__group-infor__price">₹1600</span>
@@ -208,7 +208,7 @@
                             <div class="trending-tour-item__group-infor--left">
                                 <div class="trending-tour-item__group-infor__lasting">6 person / 100 Kms</div>
                                 <div class="trending-tour-item__group-infor__lasting">Additional Km : ₹19</div>
-                                <div class="trending-tour-item__group-infor__lasting">Bata : ₹300pd</div>
+                                <div class="trending-tour-item__group-infor__lasting">Driver Bata : ₹300pd</div>
                             </div>
 
                             <p class="trending-tour-item__group-infor__sale-price">₹2100</p>
@@ -230,7 +230,7 @@
                             <div class="trending-tour-item__group-infor--left">
                                 <div class="trending-tour-item__group-infor__lasting">11 person / 100 Kms</div>
                                 <div class="trending-tour-item__group-infor__lasting">Additional Km : ₹22</div>
-                                <div class="trending-tour-item__group-infor__lasting">Bata : ₹300pd</div>
+                                <div class="trending-tour-item__group-infor__lasting">Driver Bata : ₹300pd</div>
                             </div>
 
                             <span class="trending-tour-item__group-infor__price">₹3200</span>
