minor updates in rates and address

--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
                                 <div class="trending-tour-item__group-infor__lasting">Driver Bata : ₹300pd</div>
                             </div>
 
-                            <p class="trending-tour-item__group-infor__sale-price">₹2500</p>
-                            <span class="trending-tour-item__group-infor__price">₹2400</span>
+                            <p class="trending-tour-item__group-infor__sale-price">₹2400</p>
+                            <span class="trending-tour-item__group-infor__price">₹2200</span>
 
                         </div>
                     </div>
@@ -527,6 +527,7 @@
                 <a class="qa-travel__question__btn" href="https://api.whatsapp.com/send?phone=918301088305&text=Hi"><i
                         class="fa fa-whatsapp"></i>&nbsp;&nbsp; let’s chat</a>
                 <a class="qa-travel__question__btn" href="tel:+918301088305"><i class="fa fa-phone"></i>&nbsp;&nbsp; Call</a>
+                <a class="qa-travel__question__btn" href="mailto:info@keralatoursandcabs.com"><i class="fa fa-envelope"></i>&nbsp;&nbsp; Email</a>
             </div>
         </div>
     </div>
@@ -567,7 +568,7 @@
                             </div>
                             <ul>
                                 <li><span>Kerala tours and cabs</span></li>
-                                <li><span>Piravom, Ernakulam</span></li>
+                                <li><span>Cochin, Ernakulam</span></li>
                                 <li><span>kerala, pin- 686664</span></li>
                                 <li><span>Land line : 0485 2243505</span></li>
                                 <li><span>Email : info@keralatoursandcabs.com</span></li>
