--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
                                 <div class="footer-widget-1__tittle__line-under"></div>
                             </div>
                             <ul>
-                                <li><span>Kerala tours and cabs</span></li>
+                                <li><span>Kerala Tours and Cabs</span></li>
                                 <li><span>Cochin, Ernakulam</span></li>
                                 <li><span>kerala, pin- 686664</span></li>
                                 <li><span>Land line : 0485 2243505</span></li>
