--- a/index.html
+++ b/index.html
@@ -479,11 +479,10 @@
 
             <a href="#" class="travel-review">
 
-                <span class="travel-review__name">Ankur Sharma</span>
-                <span class="travel-review__career">- Accountant -</span>
+                <span class="travel-review__name">James jaya</span>
+                <span class="travel-review__career">- Tourist -</span>
                 <span class="travel-review__rating"></span>
-                <p class="travel-review__content"> "Support from the team KTAC was excellent, especially support from Jim, who is so
-                    tollerant to hear from us and help us with our plans, great advises" </p>
+                <p class="travel-review__content"> "Uncle Jim was just amazing in everything with regards to our Kerla trip planned. Helping and guiding with our stay as planned, sight seeing,rest's,breaks and our way back to home❤️❤️❤️ Uncle Jim Abraham was simply full of patience and taking our care throughout the trip till the end. A big kudos to uncle Jim. Again thank you so much for this amazing trip."</p>
             </a>
 
 
@@ -496,11 +495,10 @@
             </a>
 
             <a href="#" class="travel-review">
-                <span class="travel-review__name">Manmeet Singh </span>
-                <span class="travel-review__career">- Wild Life Observator -</span>
+                <span class="travel-review__name">Shiji Peter</span>
+                <span class="travel-review__career">- Kuwait -</span>
                 <span class="travel-review__rating"></span>
-                <p class="travel-review__content"> "With the support of KTAC I have able to complete all my project time bound. Their
-                    experience with authorities helped us to make things much simpler, I recommend them"</p>
+                <p class="travel-review__content"> "Thank you KTAC and Jim for the wonderful trip. Your  service was excellent. We had a really good time.Will definitely recommend for our friends."</p>
             </a>
 
 
