--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
                 <span class="travel-review__name">James jaya</span>
                 <span class="travel-review__career">- Tourist -</span>
                 <span class="travel-review__rating"></span>
-                <p class="travel-review__content"> "Uncle Jim was just amazing in everything with regards to our Kerla trip planned. Helping and guiding with our stay as planned, sight seeing,rest's,breaks and our way back to home❤️❤️❤️ Uncle Jim Abraham was simply full of patience and taking our care throughout the trip till the end. A big kudos to uncle Jim. Again thank you so much for this amazing trip."</p>
+                <p class="travel-review__content"> "Team KTAC was just amazing in everything with regards to our Kerla trip planned. Helping and guiding with our stay as planned, sight seeing,rest's,breaks and our way back to home❤️❤️❤️ Staff was simply full of patience and taking our care throughout the trip till the end. A big kudos to team KTAC. Again thank you so much for this amazing trip."</p>
             </a>
 
 
@@ -498,7 +498,7 @@
                 <span class="travel-review__name">Shiji Peter</span>
                 <span class="travel-review__career">- Kuwait -</span>
                 <span class="travel-review__rating"></span>
-                <p class="travel-review__content"> "Thank you KTAC and Jim for the wonderful trip. Your  service was excellent. We had a really good time.Will definitely recommend for our friends."</p>
+                <p class="travel-review__content"> "Thank you KTAC and Team for the wonderful trip. Your  service was excellent. We had a really good time.Will definitely recommend for our friends."</p>
             </a>
 
 
