--- a/index.html
+++ b/index.html
@@ -140,13 +140,13 @@
                         </h3>
                         <div class="trending-tour-item__group-infor">
                             <div class="trending-tour-item__group-infor--left">
-                                <div class="trending-tour-item__group-infor__lasting">6 person / 100 Kms</div>
-                                <div class="trending-tour-item__group-infor__lasting">Additional Km : ₹22</div>
+                                <div class="trending-tour-item__group-infor__lasting">6 person / 80 Kms</div>
+                                <div class="trending-tour-item__group-infor__lasting">Additional Km : ₹24</div>
                                 <div class="trending-tour-item__group-infor__lasting">Driver Bata : ₹300pd</div>
                             </div>
 
-                            <p class="trending-tour-item__group-infor__sale-price">₹2500</p>
-                            <span class="trending-tour-item__group-infor__price">₹2300</span>
+<!--                             <p class="trending-tour-item__group-infor__sale-price">₹2500</p> -->
+                            <span class="trending-tour-item__group-infor__price">₹2600</span>
 
                         </div>
                     </div>
@@ -163,12 +163,12 @@
                         </h3>
                         <div class="trending-tour-item__group-infor">
                             <div class="trending-tour-item__group-infor--left">
-                                <div class="trending-tour-item__group-infor__lasting">4 person / 100 Kms</div>
-                                <div class="trending-tour-item__group-infor__lasting">Additional Km : ₹16</div>
+                                <div class="trending-tour-item__group-infor__lasting">4 person / 80 Kms</div>
+                                <div class="trending-tour-item__group-infor__lasting">Additional Km : ₹18</div>
                                 <div class="trending-tour-item__group-infor__lasting">Driver Bata : ₹300pd</div>
                             </div>
 
-                            <span class="trending-tour-item__group-infor__price">₹1700</span>
+                            <span class="trending-tour-item__group-infor__price">₹2000</span>
 
                         </div>
                     </div>
@@ -184,12 +184,12 @@
                         </h3>
                         <div class="trending-tour-item__group-infor">
                             <div class="trending-tour-item__group-infor--left">
-                                <div class="trending-tour-item__group-infor__lasting">4 person / 100 Kms</div>
-                                <div class="trending-tour-item__group-infor__lasting">Additional Km : ₹16</div>
+                                <div class="trending-tour-item__group-infor__lasting">4 person / 80 Kms</div>
+                                <div class="trending-tour-item__group-infor__lasting">Additional Km : ₹18</div>
                                 <div class="trending-tour-item__group-infor__lasting">Driver Bata : ₹300pd</div>
                             </div>
 
-                            <span class="trending-tour-item__group-infor__price">₹1700</span>
+                            <span class="trending-tour-item__group-infor__price">₹2000</span>
 
                         </div>
                     </div>
@@ -206,13 +206,13 @@
                         </h3>
                         <div class="trending-tour-item__group-infor">
                             <div class="trending-tour-item__group-infor--left">
-                                <div class="trending-tour-item__group-infor__lasting">6 person / 100 Kms</div>
-                                <div class="trending-tour-item__group-infor__lasting">Additional Km : ₹20</div>
+                                <div class="trending-tour-item__group-infor__lasting">6 person / 80 Kms</div>
+                                <div class="trending-tour-item__group-infor__lasting">Additional Km : ₹22</div>
                                 <div class="trending-tour-item__group-infor__lasting">Driver Bata : ₹300pd</div>
                             </div>
 
-                            <p class="trending-tour-item__group-infor__sale-price">₹2200</p>
-                            <span class="trending-tour-item__group-infor__price">₹2100</span>
+<!--                             <p class="trending-tour-item__group-infor__sale-price">₹2200</p> -->
+                            <span class="trending-tour-item__group-infor__price">₹2400</span>
 
                         </div>
                     </div>
@@ -228,12 +228,12 @@
                         </h3>
                         <div class="trending-tour-item__group-infor">
                             <div class="trending-tour-item__group-infor--left">
-                                <div class="trending-tour-item__group-infor__lasting">11 person / 100 Kms</div>
-                                <div class="trending-tour-item__group-infor__lasting">Additional Km : ₹22</div>
+                                <div class="trending-tour-item__group-infor__lasting">11 person / 80 Kms</div>
+                                <div class="trending-tour-item__group-infor__lasting">Additional Km : ₹24</div>
                                 <div class="trending-tour-item__group-infor__lasting">Driver Bata : ₹300pd</div>
                             </div>
 
-                            <span class="trending-tour-item__group-infor__price">₹3200</span>
+                            <span class="trending-tour-item__group-infor__price">₹3500</span>
 
                         </div>
                     </div>
