--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <a class="header-4-upper__contact" href="#">
                         <img src="assets/images/mailcontact.png" alt="mailcontact">
                         info@keralatoursandcabs.com
-                    </a>
+                    </a> 
                     <a class="header-4-upper__contact" href="tel:+918301088305">
                         <img src="assets/images/header4phone.png" alt="phone">
                         +91-8301088305
@@ -290,10 +290,10 @@
                     </div>
                     <!--end  gallery-syncing-item -->
                     <div class="tour-infomation__content__descript">
-                        <p>Kerala Tours and Cabs is one of the best and top leading taxi providers in the state of kerala. We provide all
+                        <p>Kerala Tours and Cabs is one of the best and top leading taxi providers in the state of kerala & Madurai (Tamil Nadu). We provide all
                             sorts of taxi for all who wanted a help with their travel needs when you are coming to kerala. We have an expert
                             team of professional taxi drivers at your service.
-                        <p>”Kerala Tours and Cabs” is one of the best and top leading taxi providers in the state of kerala. We arrange all
+                        <p>”Kerala Tours and Cabs” is one of the best and top leading taxi providers in the state of kerala & Madurai. We arrange all
                             sort of taxi services for those who plan their travel to kerala. We have an expert team of professional taxi
                             drivers at your service. Taxis are well maintained with necessary safety measures kept for your convenience.
                             Frequent maintenance are done for the comfort of passengers. All amenities related to the taxis are also availed
@@ -302,7 +302,7 @@
                             Alappuzha, Wayanad, Cochin/Kochi, Kumarakom, Kollam, Vagamon, Kozhikkode, Astamudi, Bekal, Guruvayur,
                             Sabarimala, Idukki, Kannur, Kasargod Backwaters, Kumarakom Backwaters, Kavvayi Backwaters, Kizhunna Beach,
                             Kuttanand, Malampuzha, Marari, Munroe Island, Malappuram, Nelliampathy, Palakkad, Ponmudi, Poovar,
-                            Thiruvananthampuram, Ernakulam, Kottayam, Malappuram, Trissur, Varkkala etc.
+                            Thiruvananthampuram, Ernakulam, Kottayam, Malappuram, Trissur, Varkkala, Madurai, Tamil Nadu etc.
 
                             <br> Taxis are also be provided for famous pilgrim sites like Sabarimala, Guruvayur, Sreepadmanabha Swami
                             Temple, Kadampuzha etc.
@@ -454,6 +454,20 @@
 
                 </div>
             </div>
+            
+            <div class="destination-4-2__item">
+                <div class="destination-4-2__content">
+                    <div class="destination-4-2__content__img"><img
+                            src="assets/images/uploads/destination/madurai.jpg" alt="Madurai">
+                    </div>
+                    <p>Madurai, TN</p>
+                    <div class="destination-4-2__content__text">Madurai is famous for its temples built by Pandyan and Madurai Nayak kings in the Dravidian style of architecture. 
+                        It is also one of India's most outstanding Hindu pilgrimage centres.
+                    </div>
+
+                </div>
+            </div>
+            
         </div>
 
     </div>
@@ -548,7 +562,7 @@
                                 <div class="footer-widget-1__text">
                                     <p>
                                         Kerala Tours and Cabs is one of the best and top leading taxi providers in the state of kerala. We
-                                        provide all sorts of taxi for your travel needs in kerala.
+                                        provide all sorts of taxi for your travel needs in kerala and Madurai (Tamil Nadu).
                                     </p>
                                 </div>
                             </div>
