--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
             <div class="destination-4-2__item">
                 <div class="destination-4-2__content">
                     <div class="destination-4-2__content__img"><img
-                            src="assets/images/uploads/destination/madurai.jpg" alt="Madurai">
+                            src="assets/images/uploads/destination/effel.png" alt="Madurai">
                     </div>
                     <p>Madurai, TN</p>
                     <div class="destination-4-2__content__text">Madurai is famous for its temples built by Pandyan and Madurai Nayak kings in the Dravidian style of architecture. 
