--- a/index.html
+++ b/index.html
@@ -519,9 +519,41 @@
             <a href="#" class="travel-review">
                 <span class="travel-review__name">Ashly Fernadez</span>
                 <span class="travel-review__career">- Foreign Traveller -</span>
-                <span class="travel-review__rating--4-star"></span>
+                <span class="travel-review__rating"></span>
                 <p class="travel-review__content">"Thanks to KTAC for their taxi services, supported me with my brocken english for reaching
                     destinations"</p>
+            </a>
+
+            <a href="#" class="travel-review">
+                <span class="travel-review__name">Siddharth Mistry</span>
+                <span class="travel-review__career">- Mumbai -</span>
+                <span class="travel-review__rating"></span>
+                <p class="travel-review__content">"Jim is a gem of a person. The reason I wrote person instead of driver is because of the relationship we formed over the 5 days of our trip. He's a very genuine person who looked out for our interest and helped us multiple times in our trip. Given we were not locals, he talked with the locals for us. He did so voluntarily without us requesting his help. He also recommended great hotels, local shops, and tourist spots and guided us on how to navigate for purchasing tickets. Additionally, he was always on time and very diligent. He knows the roads really well and always made us reach on time. Moreover, the car is super clean and in great condition. All in all, he is a great combination of a driver as well as a guide for your trip. If you speak Hindi and or English and you're looking to have a great time, I would highly recommend Jim in the blink of an eye! "</p>
+            </a>
+
+
+            <a href="#" class="travel-review">
+                <span class="travel-review__name">Ashly Fernadez</span>
+                <span class="travel-review__career">- Foreign Traveller -</span>
+                <span class="travel-review__rating"></span>
+                <p class="travel-review__content">"Thanks to KTAC for their taxi services, supported me with my brocken english for reaching
+                    destinations"</p>
+            </a>
+
+
+            <a href="#" class="travel-review">
+                <span class="travel-review__name">Shikha shah</span>
+                <span class="travel-review__career">- USA -</span>
+                <span class="travel-review__rating"></span>
+                <p class="travel-review__content">"Jimm was excellent! He had wonderful recommendations throughout the tour. Additionally, driving was safe and good! At the end of our vacation, he felt.more like family!"</p>
+            </a>
+
+
+            <a href="#" class="travel-review">
+                <span class="travel-review__name">Nicholette Dsouza</span>
+                <span class="travel-review__career">- Mumbai -</span>
+                <span class="travel-review__rating"></span>
+                <p class="travel-review__content">"It was our first trip to Kerala. The driver assigned to us was Jimmy. He was kind, polite and very hospitable. Even after his trip assigned with us was till kollam, he was not only a driver but also a really good guide. My mom had motion sickness for which we had to stop the car multiple times, he was patient and undersranding throughout our trip. We had an amazing experience. I have seen the best places and have captured amazing memories also our first visit to the boat house was wonderful. The staff was kind and hispitable. If I ever get a chance to visit Kerala again I will definitely go with the same travel agency for making our trip smooth and memorable."</p>
             </a>
 
         </div>
