--- a/index.html
+++ b/index.html
@@ -653,7 +653,15 @@
 
 <script src="assets/scripts/slick.min.js"></script>
 <script src="assets/scripts/isotope.pkgd.min.js"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-S9RZLYCMJ1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-S9RZLYCMJ1');
+</script>
 
 <script src="assets/scripts/app.js"></script>
 </body>
