--- a/index.html
+++ b/index.html
@@ -154,12 +154,12 @@
                         <div class="trending-tour-item__group-infor">
                             <div class="trending-tour-item__group-infor--left">
                                 <div class="trending-tour-item__group-infor__lasting">8 person / 80 Kms</div>
-                                <div class="trending-tour-item__group-infor__lasting">Additional Km : ₹24</div>
+                                <div class="trending-tour-item__group-infor__lasting">Additional Km : ₹26</div>
                                 <div class="trending-tour-item__group-infor__lasting">Driver Bata : ₹300pd</div>
                             </div>
 
                             <!--                             <p class="trending-tour-item__group-infor__sale-price">₹2500</p> -->
-                            <span class="trending-tour-item__group-infor__price">₹3000</span>
+                            <span class="trending-tour-item__group-infor__price">4500</span>
 
                         </div>
                     </div>
@@ -183,7 +183,7 @@
                             </div>
 
                             <!--                             <p class="trending-tour-item__group-infor__sale-price">₹2500</p> -->
-                            <span class="trending-tour-item__group-infor__price">₹2600</span>
+                            <span class="trending-tour-item__group-infor__price">₹3500</span>
 
                         </div>
                     </div>
@@ -201,11 +201,11 @@
                         <div class="trending-tour-item__group-infor">
                             <div class="trending-tour-item__group-infor--left">
                                 <div class="trending-tour-item__group-infor__lasting">4 person / 80 Kms</div>
-                                <div class="trending-tour-item__group-infor__lasting">Additional Km : ₹18</div>
+                                <div class="trending-tour-item__group-infor__lasting">Additional Km : ₹20</div>
                                 <div class="trending-tour-item__group-infor__lasting">Driver Bata : ₹300pd</div>
                             </div>
 
-                            <span class="trending-tour-item__group-infor__price">₹2000</span>
+                            <span class="trending-tour-item__group-infor__price">₹2200</span>
 
                         </div>
                     </div>
@@ -222,11 +222,11 @@
                         <div class="trending-tour-item__group-infor">
                             <div class="trending-tour-item__group-infor--left">
                                 <div class="trending-tour-item__group-infor__lasting">4 person / 80 Kms</div>
-                                <div class="trending-tour-item__group-infor__lasting">Additional Km : ₹18</div>
+                                <div class="trending-tour-item__group-infor__lasting">Additional Km : ₹20</div>
                                 <div class="trending-tour-item__group-infor__lasting">Driver Bata : ₹300pd</div>
                             </div>
 
-                            <span class="trending-tour-item__group-infor__price">₹2000</span>
+                            <span class="trending-tour-item__group-infor__price">₹2200</span>
 
                         </div>
                     </div>
@@ -249,7 +249,7 @@
                             </div>
 
                             <!--                             <p class="trending-tour-item__group-infor__sale-price">₹2200</p> -->
-                            <span class="trending-tour-item__group-infor__price">₹2400</span>
+                            <span class="trending-tour-item__group-infor__price">₹2800</span>
 
                         </div>
                     </div>
@@ -266,11 +266,11 @@
                         <div class="trending-tour-item__group-infor">
                             <div class="trending-tour-item__group-infor--left">
                                 <div class="trending-tour-item__group-infor__lasting">11 person / 80 Kms</div>
-                                <div class="trending-tour-item__group-infor__lasting">Additional Km : ₹24</div>
+                                <div class="trending-tour-item__group-infor__lasting">Additional Km : ₹30</div>
                                 <div class="trending-tour-item__group-infor__lasting">Driver Bata : ₹300pd</div>
                             </div>
 
-                            <span class="trending-tour-item__group-infor__price">₹3500</span>
+                            <span class="trending-tour-item__group-infor__price">₹5000</span>
 
                         </div>
                     </div>
