kerl tours  SEO updated

--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Kerala Tours and Cabs</title>
+    <meta name="description" content="Plan your dream vacation with Kerala Tours and Cabs. Book affordable cabs and tours across Kerala with the best travel services.">
+    <meta name="keywords" content="Kerala Tours, Kerala Cabs, Kerala Travel, Affordable Cabs, Book Tours Kerala, Travel Kerala, Cab Services Kerala">
+    <meta name="author" content="Kerala Tours and Cabs">
+
+    <!-- Ensure Open Graph for social sharing -->
+    <meta property="og:title" content="Kerala Tours and Cabs">
+    <meta property="og:description" content="Explore the beauty of Kerala with premium tours and cab services.">
+    <meta property="og:image" content="assets/images/banner.jpg">
+    <meta property="og:url" content="https://keralatoursandcabs.com">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card Metadata -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Kerala Tours and Cabs">
+    <meta name="twitter:description" content="Affordable Kerala tours and cab services tailored to your journey needs.">
+    <meta name="twitter:image" content="assets/images/banner.jpg">
 
     <link rel="stylesheet" href="assets/styles/css/slick.css">
     <link rel="stylesheet" href="assets/styles/css/slick-theme.css">
@@ -761,7 +777,29 @@
   gtag('config', 'G-S9RZLYCMJ1');
 
 </script>
-
+<script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "TravelAgency",
+        "name": "Kerala Tours and Cabs",
+        "url": "https://keralatoursandcabs.com",
+        "logo": "https://keralatoursandcabs.com/assets/images/logo.png",
+        "description": "Book affordable cabs and tour services in Kerala. Enjoy scenic trips and hassle-free travel.",
+        "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "123 Main Street",
+            "addressLocality": "Kerala",
+            "addressRegion": "KL",
+            "postalCode": "682001",
+            "addressCountry": "IN"
+        },
+        "telephone": "+91-9895806880",
+        "sameAs": [
+            "https://www.instagram.com/keralatours_and_cabs/",
+            "https://www.facebook.com/keral.tours.9/"
+        ]
+    }
+</script>
 <script src="assets/scripts/app.js"></script>
 </body>
 
